<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mumbai</string>
    <string name="menu_create">Criar</string>
    <string name="menu_search">Procurar</string>
    <string name="menu_location">Localização Atual</string>
    <string name="menu_configuration">Configuração</string>
    <string name="settings_title">Configurações</string>
    <string name="settings_categoryAccount">Conta</string>
    <string name="settings_categoryAdvance">Avançado</string>
    <string name="settings_categoryAbout">Sobre</string>
    <string name="settings_accountDefault">Criar/Logar Conta</string>
    <string name="settings_account">\@Conta</string>
    <string name="settings_accounts">Contas</string>
    <string name="settings_sync">Sincronização</string>
    <string name="settings_syncSumm">Automático</string>
    <string name="settings_syncSummLastUpdate">Sincronizado </string>
    <string name="settings_notif">Notificação</string>
    <string name="settings_notifSumm">Mostrar no Sistema</string>
    <string name="settings_highResolution">Alta Resolução</string>
    <string name="settings_highResolutionSumm">Imagens com maior definição</string>
    <string name="settings_aboutVersion">Versão</string>
    <string name="settings_aboutDeveloper">Developer</string>
    <string name="settings_compilation">Compilação</string>
    <string name="settings_accountBound">Conta Vinculada</string>
    <string name="settings_accountNoBound">Sem Vinculo</string>
    <string name="settings_accountGoogle">Google Account</string>
    <string name="settings_accountFacebook">Facebook Account</string>
    <string name="settings_accountTwitter">Twitter API Account</string>
    <string name="settings_helper">Ajudar</string>
    <string name="settings_helperInf">Informações Úteis</string>
    <string name="settings_helperAboutPlataforma">Sobre a Plataforma</string>
    <string name="settings_helperAboutPlataformaInfo">Saiba mais sobre paraformalidades</string>
    <string name="see_title">Detalhes</string>
    <string name="see_subTitle">Cena X</string>
    <string name="see_imageDetail">Imagem Exibição</string>
    <string name="see_date">10–12–2013</string>
    <string name="see_paraformaliade">Paraformalidade</string>
    <string name="see_activity">Atividade Registrada</string>
    <string name="see_edit">Editar</string>
    <string name="see_share">Compartilhar</string>
    <string name="see_settings">Configuração</string>
    <string name="see_description">Cena Tal com imagen tal</string>
    <string name="see_author">fulano da silva</string>
    <string name="imageFull_image">Visulizador de Imagem</string>
    <string name="imageFull_title">Visualizador de Imagens</string>
    <string name="imageFull_subTitle">Cena A</string>
    <string name="edit_title">Criar/Editar</string>
    <string name="edit_subTitle">Cena Y</string>
    <string name="edit_imgDetail">Detalhes da Imagem</string>
    <string name="edit_btnUpload">Carregar Image</string>
    <string name="edit_description">Descrição</string>
    <string name="edit_send">Enviar</string>
    <string name="edit_settings">Configurações</string>
    <string name="search_title">Filtrar</string>
    <string name="search_subTitle">Use Tags</string>
    <string name="search_discard">Limpar Filtros</string>
    <string name="search_filter">Filtrar</string>
    <string name="search_settings">Configuracação</string>

    <string name="alert_principal_GPSNotConnected">Habilite seu GPS</string>
    <string name="alert_principal_GPSFailed">Falha ao obter local por GPS</string>
    <string name="alert_edit_title">Paraformalidade</string>
    <string name="alert_edit_message">Enviada com sucesso!</string>
    <string name="alert_edit_chooseUploadTitle">Escolha</string>
    <string name="alert_edit_chooseUploadMessage"></string>
    <string name="settings_helperCenter">Central de Ajuda</string>
    <string name="alert_settings_saveSuccess">Configuração Salva</string>
    <string name="alert_settings_notSaveSucess">Erro ao Salvar Configuração</string>
</resources>
