<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_categoryAccount">
        <ListPreference
            android:key="settings_Account"
            android:title="@string/settings_accountDefault"
            android:summary="@string/settings_accountDefaultType"
            android:dialogTitle="@string/settings_accounts"
            android:entries="@array/settings_accountsOptions"
            android:entryValues="@array/settings_accountsValues">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_categoryAdvance">
        <CheckBoxPreference
            android:key="settings_sync"
            android:title="@string/settings_sync"
            android:summary="@string/settings_sync"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="settings_sync"
            android:title="@string/settings_notif"
            android:summary="@string/settings_notifSumm"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="settings_imgHighResolution"
            android:title="@string/settings_highResolution"
            android:summary="@string/settings_highResolutionSumm"
            android:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_categoryAbout">
        <PreferenceScreen
            android:title="@string/settings_aboutVersion"
            android:summary="@string/settings_aboutDevelopers"
            android:persistent="false">

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>