<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Mumbai="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.paraformalidade.mumbai.menu_general" >
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_create"
        android:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_labels"
        android:title="@string/menu_search"
        android:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/menu_location"
        android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_configuration"
        android:showAsAction="ifRoom">
    </item>
</menu>
