<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.plataformaparaformal.Mumbai.SearchActivity" >
    <item
        android:id="@+id/search_filter"
        android:title="@string/search_filter"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/search_discard"
        android:title="@string/search_discard"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/search_settings"
        android:title="@string/search_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom">
    </item>
</menu>
