<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.plataformaparaformal.Mumbai.SeeParaformalidadeActivity" >
    
    <item
        android:id="@+id/see_edit"
        android:title="@string/see_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/see_share"
        android:title="@string/see_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/see_settings"
        android:title="@string/see_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom">
    </item>
</menu>
