<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:stretchColumns="0">
        <TableRow
            android:id="@+id/see_imgRow">
            <ImageView
                android:id="@+id/see_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:scaleType="center"
                android:contentDescription="@string/see_imageDetail"
                android:minHeight="150dp"
                android:minWidth="150dp"
                android:src="@drawable/ic_paraformalidade">
            </ImageView>

        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/see_description"
                android:focusable="false"
                android:inputType="text"
                android:width="@dimen/abc_config_prefDialogWidth"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:enabled="false"
                android:layout_gravity="center"
                android:text="@string/see_description"
                android:textIsSelectable="false">
            </EditText>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_activityType"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_activitiesTypes"
                android:prompt="@string/see_edit">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_localizationType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_localizationsTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_registredAmountType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_registredAmountTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_equipmentMobilityType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_equimentMobilitiesTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_shiftType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_shiftsTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/see_senseType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_sensesTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/see_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/see_author"
                android:ems="10"
                android:enabled="false"
                android:textIsSelectable="false"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/see_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@string/see_date"
                android:ems="10"
                android:enabled="false"
                android:textIsSelectable="false"
                android:gravity="left"
                />
        </TableRow>
    </TableLayout>
</ScrollView>