<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0"
        android:stretchColumns="0">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/edit_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_span="2"
                android:scaleType="center"
                android:contentDescription="@string/edit_imgDetail"
                android:minHeight="150dp"
                android:minWidth="150dp"
                android:src="@drawable/ic_paraformalidade">
            </ImageView>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/edit_btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btnUpload">
            </Button>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_description"
                android:focusable="false"
                android:inputType="text"
                android:width="@dimen/abc_config_prefDialogWidth"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:layout_gravity="center"
                android:text="@string/edit_description">
            </EditText>
        </TableRow>
        <TableRow
            android:layout_height="fill_parent">
            <Spinner
                android:id="@+id/edit_activityType"
                android:layout_span="2"
                android:layout_height="50dp"
                android:entries="@array/see_activitiesTypes"
                android:prompt="@string/see_edit">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_siftType"
                android:layout_span="2"
                android:layout_height="50dp"
                android:entries="@array/see_shiftsTypes"
                android:prompt="@string/see_edit">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_registredAmountType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_registredAmountTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_localizationType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_localizationsTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_positonBodyType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_positionBodyTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_numberBodyType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_numberBodyTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_equipmentScaleType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_equipmentScaleTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_equipmentMobilityType"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="2"
                android:entries="@array/see_equimentMobilitiesTypes">
            </Spinner>
        </TableRow>
        <TableRow>
            <com.plataformaparaformal.Mumbai.util.MultiSelectSpinner
                android:id="@+id/edit_sensesType"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

            </com.plataformaparaformal.Mumbai.util.MultiSelectSpinner>
        </TableRow>
        <TableRow>
            <com.plataformaparaformal.Mumbai.util.MultiSelectSpinner
                android:id="@+id/edit_environmentalConditionsType"
                android:layout_width="wrap_content"
                android:layout_height="50dp">
            </com.plataformaparaformal.Mumbai.util.MultiSelectSpinner>
        </TableRow>
        <TableRow>
            <com.plataformaparaformal.Mumbai.util.MultiSelectSpinner
                android:id="@+id/edit_equipmentInstalation"
                android:layout_width="wrap_content"
                android:layout_height="50dp">
            </com.plataformaparaformal.Mumbai.util.MultiSelectSpinner>
        </TableRow>
        <TableRow>
            <com.plataformaparaformal.Mumbai.util.MultiSelectSpinner
                android:id="@+id/edit_climateType"
                android:layout_width="wrap_content"
                android:layout_height="50dp">
            </com.plataformaparaformal.Mumbai.util.MultiSelectSpinner>
        </TableRow>
    </TableLayout>
</ScrollView>